--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,5 @@ jobs:
       - name: create user settings
         run: cp user-settings.template.nix user-settings.nix
       - name: build the home configuration
-        run: nix run home-manager/release-25.05 -- build -f home.nix
+        # release-25.05 is broken
+        run: nix run home-manager/f5b12be834874f7661db4ced969a621ab2d57971 -- build -f home.nix
